Added most dumb heuristic and skeleton of the paper

--- a/Vortrag/ParkingProblem.tex
+++ b/Vortrag/ParkingProblem.tex
@@ -205,6 +205,10 @@ Bleibt dieser Parameter stabil unter sich ändernder Frequenz ankommender Autos?
 \end{itemize}
 \end{frame}
 
+\begin{frame}{Unsere Simulation}{Ergebnisse -- Parameterverlauf bei langer hoher Frequenz}
+	\includegraphics[width=\textwidth]{streuung_long.PNG}
+\end{frame}
+
 \section{Ausblick}
 
 \begin{frame}{Ausblick}
@@ -226,7 +230,10 @@ Bleibt dieser Parameter stabil unter sich ändernder Frequenz ankommender Autos?
 \end{frame}
 
 \begin{frame}
+\begin{center}
+\includegraphics[scale = 0.25]{quer_parken_1.jpg}\\
 Danke für Eure Aufmerksamkeit!
+\end{center}
 \end{frame}
 
 
