Grundgerüst der Hausarbeit verfasst

--- a/Ausarbeitung/ParkingProblem.tex
+++ b/Ausarbeitung/ParkingProblem.tex
@@ -1,5 +1,12 @@
-\input{kopf}
+\input{kopf.tex}
 
 \begin{document}
+
+\input{Einleitung.tex}
+\input{Heuristiken.tex}
+\input{Simulation.tex}
+\input{Ergebnisse.tex}
+\input{Schule.tex}
+
 
 \end{document}
