Simulation sollte nun laufen...

--- a/Ausarbeitung/Heuristiken.tex
+++ b/Ausarbeitung/Heuristiken.tex
@@ -1,18 +1,29 @@
 \section{Parken auf einem Parkplatz, aber wie?}
 
 Um die Ergebnisse auswerten zu können, muss zunächst entschieden werden, wann ein Parkplatz als gut angenommen wird.\\
-Im Folgenden werden alle Fahrer das gleiche Ziel haben. dieses befindet sich am Scheitelpunkt einer U-förmigen Straße. Lediglich an diesem Scheitelpunkt ist es möglich zu wenden, falls bis zu diesem Zeitpunkt noch kein Parkplatz gewählt wurde. Ein Fahrer fährt also den Parkplatz entlang, verfolgt seine Strategie und wählt gegebenenfalls einen Parkplatz. Findet er keinen bis er am Ziel angekommen ist, so fährt er um die Kurve und wieder an Parkplätzen vorbei und wählt, unabhängig von seiner vorherigen Strategie, den ersten freien Parkplatz den er findet. Auf dem Weg zur Destination kann man davon ausgehen, dass ein Fahrer sehen kann, ob der Parkplatz an dem er sich gerade befindet und der direkt daneben besetzt oder frei ist. Würde ein Fahrer nach seinem System einen Parkplatz wählen, der folgende Parkplatz jedoch frei ist, so wählt er diesen.\\
-Insgesamt gibt es viele Bewertungskriterien für einen guten Parkplatz. Fahranfänger könnten einen Parkplatz vorziehen, der sich relativ weit entfernt von der Destination befindet, wo jedoch nicht viel Betrieb ist, wodurch sie beim Aus- oder Einparken weniger Stress ausgesetzt sind. Im Sommer könnten Parkplätze die im Schatten liegen bevorzugt werden. Im Allgemeinen Fall kann man aber annehmen, dass ein Parkplatz dann als gut gilt, wenn er sich möglichst nah an der Destination befindet. Dadurch ist die Laufzeit zum Ziel optimiert und, falls es sich bei dem Ziel um ein Einkaufszentrum oder ähnliches handelt, müssen die Einkäufe auf dem Rückweg auch nur kurz getragen werden.\\
+Im Folgenden werden alle Fahrer das gleiche Ziel haben. dieses befindet sich am Scheitelpunkt einer U-förmigen Straße. Lediglich an diesem Scheitelpunkt ist es möglich zu wenden, falls bis zu diesem Zeitpunkt noch kein Parkplatz gewählt wurde. Ein Fahrer fährt also den Parkplatz entlang, verfolgt seine Strategie und wählt gegebenenfalls einen Parkplatz. Findet er keinen bis er am Ziel angekommen ist, so fährt er um die Kurve und wieder an Parkplätzen vorbei und wählt, unabhängig von seiner vorherigen Strategie, den ersten freien Parkplatz den er findet. Auf dem Weg zur Destination kann man davon ausgehen, dass ein Fahrer sehen kann, ob der Parkplatz an dem er sich gerade befindet und der direkt daneben besetzt oder frei ist. Würde ein Fahrer nach seinem System einen Parkplatz wählen, der folgende Parkplatz jedoch frei ist, so wählt er diesen.
+
+Insgesamt gibt es viele Bewertungskriterien für einen guten Parkplatz. Fahranfänger könnten einen Parkplatz vorziehen, der sich relativ weit entfernt von der Destination befindet, wo jedoch nicht viel Betrieb ist, wodurch sie beim Aus- oder Einparken weniger Stress ausgesetzt sind. Im Sommer könnten Parkplätze die im Schatten liegen bevorzugt werden. Im Allgemeinen Fall kann man aber annehmen, dass ein Parkplatz dann als gut gilt, wenn er sich möglichst nah an der Destination befindet. Dadurch ist die Laufzeit zum Ziel optimiert und, falls es sich bei dem Ziel um ein Einkaufszentrum oder ähnliches handelt, müssen die Einkäufe auf dem Rückweg auch nur kurz getragen werden.
+
 Hutchinson stellt 7 Heuristiken vor, nach denen ein Parkplatz gesucht werden kann. An diesen orientiert sich diese Arbeit auch. \\
-Zunächst gibt es die \emph{fixed-distance heuristic}, dabei fährt der Suchende bis zu einer festen Distanz an das Ziel heran und wählt dann den nächsten freien Parkplatz. Sehr ähnlich funktioniert die \emph{proportional-distance heuristic}, bei welcher der Fahrer die Strecke zwischen dem ersten geparkten Auto und dem Ziel nimmt und einen bestimmten Teil dieser Strecke bis zum Ziel heran fährt, um dann den nächsten freien Parkplatz zu wählen.\\
-Zusätzlich werden die \emph{car-count heuristic} und die \emph{space-count heuristic} vorgestellt. Bei der ersten Variante wählt der Fahrer den ersten freien Parkplatz, nachdem er an einer bestimmten Anzahl an geparkten Autos vorbei gefahren ist. Sobald der Fahrer an dem ersten geparkten Auto und danach an einer bestimmten Anzahl an freien Plätzen vorbei gefahren ist, wählt er bei der space-count heuristic den nächsten freien Platz.\\
+Zunächst gibt es die \emph{fixed-distance heuristic}, dabei fährt der Suchende bis zu einer festen Distanz an das Ziel heran und wählt dann den nächsten freien Parkplatz. Sehr ähnlich funktioniert die \emph{proportional-distance heuristic}, bei welcher der Fahrer die Strecke zwischen dem ersten geparkten Auto und dem Ziel nimmt und einen bestimmten Teil dieser Strecke bis zum Ziel heran fährt, um dann den nächsten freien Parkplatz zu wählen.
+
+Zusätzlich werden die \emph{car-count heuristic} und die \emph{space-count heuristic} vorgestellt. Bei der ersten Variante wählt der Fahrer den ersten freien Parkplatz, nachdem er an einer bestimmten Anzahl an geparkten Autos vorbei gefahren ist. Sobald der Fahrer an dem ersten geparkten Auto und danach an einer bestimmten Anzahl an freien Plätzen vorbei gefahren ist, wählt er bei der space-count heuristic den nächsten freien Platz.
+
 Bei der \emph{block-count heuristic} wählt der Fahrer einen Parkplatz, wenn er zuvor an einer gewählten Anzahl an geparkten Autos, ohne einen freien Platz dazwischen, vorbei gefahren ist.\\
-Ähnlich funktioniert die \emph{x-out-of-y heuristic}, wobei der Fahrer einen Platz wählt, wenn er an y (oder weniger) Plätzen vorbei gefahren ist und innerhalb dieses Blockes mindestens x Plätze besetzt waren. \\
+Ähnlich funktioniert die \emph{x-out-of-y heuristic}, wobei der Fahrer einen Platz wählt, wenn er an y (oder weniger) Plätzen vorbei gefahren ist und innerhalb dieses Blockes mindestens x Plätze besetzt waren. 
+
 Zuletzt wird die \emph{linear-operator heuristic} beschrieben. Dabei wird ständig der Wert $z_i$, wie folgt, berechnet: $z_i=a\cdotz_{i-1}+b_i$. Dabei ist $a<1$ eine Konstante, die bestimmt, wie schnell ,,vergessen'' wird. $z_0=0$ und $b_i=\lbrace 0$, falls der i-te Platz frei ist $-1$, wenn der i-te Platz besetzt ist. %TODO Klammer bitte schön machen, dass die Klammer groß ist und 0 und -1 untereinander stehen\\
 Falls $z_j>z_T$, wobei $z_T$ ein vom Fahrer gewählter Wert ist, wählt der Fahrer den j-ten Parkplatz, wenn j die Position des ersten freien Parkplatzes ist, bei dem die Ungleichung erfüllt ist. 
 
 \subsection{Das Lernen der Heuristikparameter}
-Um jeweils die beste Konfiguration einer Heurisitk zu ermitteln, wird ein Lernalgorithmus während der Simulation angewandt. Hutchinson et al \textbf{cite} verwenden in ihrem Model dazu einen evolutionären Ansatz, bei dem in regelmäßigen Intervallen eine Selektion der erfolgreichsten Heuristiken stattfinded. Zu Beginn der Simulation erhält jeder Autofahrer eine zufällige Heuristik mit ebenfalls zufälliger Konfiguration. Nach festgelegten Intervallen werden die erfolgreichsten 10 Heuristiken ermittelt und diese auf die gesamte Population übertragen. Um eine fortlaufende Verbesserung der gefundenen Heurstikkonfigurationen zu gewährleisten, erhält ein festgelegter Prozentsatz der Population neue zufällig konfigurierte Heuristiken. 
+Um jeweils die beste Konfiguration einer Heurisitk zu ermitteln, wird ein Lernalgorithmus während der Simulation angewandt. Hutchinson et al \textbf{cite} verwenden in ihrem Model dazu einen evolutionären Ansatz, bei dem in regelmäßigen Intervallen eine Selektion der erfolgreichsten Heuristiken stattfinded. Zu Beginn der Simulation erhält jeder Autofahrer eine zufällige Heuristik mit ebenfalls zufälliger Konfiguration. Nach festgelegten Intervallen werden die erfolgreichsten 10 Heuristiken ermittelt und diese auf die gesamte Population übertragen. Um eine fortlaufende Verbesserung der gefundenen Heurstikkonfigurationen zu gewährleisten, erhält ein festgelegter Prozentsatz der Population neue zufällig konfigurierte Heuristiken. Bei entsprechender Simulationslänge ergibt sich dadurch ein Gleichgewichtszustand von Heuristiken. 
+
+Diese Art des Lernens ist jedoch auf das reale Problem schwer anwendbar. Es ist unwahrscheinlich, dass sich die gesamte Population, also alle Autofahrer der Umgebung, regelmäßig treffen und die zehn besten Strategien feststellen. Im Allgemeinen kann davon ausgegangen werden, dass keine produktive Kommunikation zwischen den Individuen stattfindet. Um dennoch eine optimale Konfiguration für eine Heurstik lernen zu können, muss sich das Lernen auf die Erfahrungen des Individuums beschränken. 
+
+Aus diesem Grund erhält in dem hier verwendeten Modell jeder Fahrer ein Gedächtnis, aus dem sich eine Konfiguration generieren lässt. Das hier verwendete Gedächtnis ist beschränkt, vergisst priorisierend und aktualisiert die Effizienzs der Konfiguirationen
+
+
 %TODO Realitätsfern weil
 %TODO Gekapseltes Lernen
 %TODO Wie
