--- a/Ausarbeitung/ParkingProblem.tex
+++ b/Ausarbeitung/ParkingProblem.tex
@@ -3,10 +3,10 @@
 \begin{document}
 
 \input{Einleitung.tex}
-\input{Heuristiken.tex}
-\input{Simulation.tex}
-\input{Ergebnisse.tex}
-\input{Schule.tex}
-\input{Anhang.tex}
+\include{Heuristiken.tex}
+\include{Simulation.tex}
+\include{Ergebnisse.tex}
+\include{Schule.tex}
+\include{Anhang.tex}
 
 \end{document}
