Schule.tex bearbeitet

--- a/Ausarbeitung/Schule.tex
+++ b/Ausarbeitung/Schule.tex
@@ -1,8 +1,21 @@
 \section{Einsatz in der Schule}
 \subsection{Einordnung in die Lehrpläne}
 
+Der Lehrplan legt viel Wert darauf, dass Schülerinnen und Schüler im Umgang mit Computern geschult werden. Dieser Umgang kann mit Hilfe eines Projektes, welches sich mit der vorliegenden Simulation befasst, erreicht werden. Zusätzlich ist der Prozess der Modellbildung aufgeführt, welcher auch mit Hilfe dieses Projektes verdeutlicht werden kann.\\
+Das Projekt kann innerhalb der Sekundarstufe II durchgeführt werden, im Bereich der Stochastik. \\
+In diesem Bereich sollen die Schülerinnen und Schüler des Leistungskurses sich mit Fragestellungen aus der beurteilenden Statistik befassen. Dies wird durch die Auswertung der Tabellen und Diagramme erreicht. 
+
 \subsection{Didaktische Anmerkungen}
 
+Der komplette Aufbau der Simulation ist nicht geeignet, um ihn von Schülerinnen und Schülern durchführen zu lassen. Die Grundlegende Datei wurde jedoch so erstellt, dass es leicht möglich ist, gewünschte Parameter einfach zu verändern und die Simulation so an Gegebenheiten anzupassen.\\
+Die Schülerinnen und Schüler sollten innerhalb der Unterrichtsreihe Werte sammeln, die sie in die Simulation einfügen können. Dadurch lernen sie reale Situationen so zu beschreiben und zu strukturieren, dass sie die Modellbildung nachvollziehen und in Teilen sogar selbstständig durchführen zu können.\\
+Nachdem die Simulation durchgeführt wurde, sollen die Schülerinnen und Schüler entscheiden, welche Heuristik angewendet werden sollte. 
+
 \subsection{Methodische Anmerkungen}
+
+Die Schülerinnen und Schüler sollen zunächst Erkenntnisse über die Realität gewinnen, um die Simulation anzupassen. Dafür können sie an Parkplätzen messen wie viele Autos auf den Parkplatz fahren. Zusätzlich können sie Bekannte befragen auf welche Art und Weise diese Parkplätze aussuchen.\\
+Zwar sind die Schülerinnen und Schüler zu diesem Zeitpunkt etwa 16 Jahre als, dennoch sollte darauf geachtet werden, dass es gefährlich ist sich in der nähe von fahrenden Autos aufzuhalten. Daher ist es auch möglich auf dem Rathaus, bei der Polizei oder im Internet nach den benötigten Informationen zu suchen. \\
+Diese rohen Werte sollen von den Schülerinnen und Schülern so aufgearbeitet werden, dass diese in die Simulation eingebaut werden können.\\
+ Ist die Simulation dann vorbereitet kann sie durchgeführt werden. Die daraus entstandenen Daten können dann in einem Tabellenkalkulationsprogramm zu Diagrammen verarbeitet werden. 
 
 \subsection{Unterrichtsreihe}
