--- a/Ausarbeitung/kopf.tex
+++ b/Ausarbeitung/kopf.tex
@@ -31,7 +31,7 @@
 \usepackage{pgffor}
 
 %---Deckblatt---%
-\newcommand{\myauthor}{Steffen Holzer}
+\newcommand{\myauthor}{Steffen Holzer \& Ellen Wagner}
 \newcommand{\mytitle}{}
 \newcommand{\subtitle}{}
 \newcommand{\dozent}{}
